--- a/THE_MIRROR_OF_THE_SOUL.html
+++ b/THE_MIRROR_OF_THE_SOUL.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>**THE MIRROR OF THE SOUL** | Odisha Sacred Odyssey</title>
+    <title>THE MIRROR OF THE SOUL | Odisha Sacred Odyssey</title>
     <meta name="description" content="A spiritual journey through Odisha">
 
     <!-- Fonts -->
@@ -58,12 +58,12 @@
                 <li><span aria-hidden="true">/</span></li>
                 <li><a href="index.html#research">Temples</a></li>
                 <li><span aria-hidden="true">/</span></li>
-                <li aria-current="page">**THE MIRROR OF THE SOUL**</li>
+                <li aria-current="page">THE MIRROR OF THE SOUL</li>
             </ol>
         </nav>
 
         <header class="article-header reveal">
-            <h1 class="article-title">**THE MIRROR OF THE SOUL**</h1>
+            <h1 class="article-title">THE MIRROR OF THE SOUL</h1>
             <div class="article-meta">
                 <span class="read-time">9 min read</span>
                 <span class="category-pill">Temples</span>
@@ -71,7 +71,7 @@
         </header>
 
         <div class="featured-image reveal">
-            <div class="image-placeholder">Featured Image for **THE MIRROR OF THE SOUL**</div>
+            <div class="image-placeholder">Featured Image for THE MIRROR OF THE SOUL</div>
         </div>
 
         <div class="content-wrapper reveal">
