--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                 <a href="index.html#hero">Home</a>
                 <a href="index.html#timeline">Itinerary</a>
                 <a href="index.html#gallery">Gallery</a>
-                <a href="search.json">Search</a>
+                <a href="search.html">Search</a>
             </div>
             <div class="footer-copyright">
                 <p>&copy; 2024 Sacred Odyssey. Created with reverence.</p>
