--- a/index.html
+++ b/index.html
@@ -1,88 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TravelBlog - Odisha Sacred Odyssey</title>
-    <meta name="description" content="Exploring the spiritual and architectural heritage of Odisha, India.">
-    <link rel="stylesheet" href="assets/css/main.css">
-    <link rel="stylesheet" href="assets/css/components/typography.css">
-</head>
-<body>
-    <div class="texture-overlay"></div>
-
-    <header class="site-header">
-        <div class="nav-container">
-            <a href="index.html" class="site-logo">
-                <span class="logo-icon">
-                    <svg viewBox="0 0 24 24" width="24" height="24" fill="currentColor">
-                        <path d="M12 2L2 22h20L12 2zm0 3.5L18.5 19H5.5L12 5.5z"/>
-                        <rect x="10" y="12" width="4" height="6"/>
-                    </svg>
-                </span>
-                TravelBlog
-            </a>
-
-            <nav>
-                <ul class="nav-links">
-                    <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-                    <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
-                    <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-                    <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-                </ul>
-            </nav>
-
-            <div class="nav-controls">
-                <button id="theme-toggle" class="control-btn" aria-label="Toggle Lantern Mode" title="Lantern Mode" data-tooltip="Lantern Mode">
-                    <svg viewBox="0 0 24 24" width="24" height="24" fill="currentColor">
-                         <path d="M12 2c0 0-3 5-3 8s3 4 3 4 3-1 3-4-3-8-3-8z" opacity="0.6"/>
-                         <path d="M2 14c0 4.418 3.582 8 8 8h4c4.418 0 8-3.582 8-8H2z"/>
-                    </svg>
-                </button>
-                <button id="drawer-toggle" class="control-btn" aria-label="Open Tags" title="Constellation Drawer" data-tooltip="Constellation">
-                    <svg viewBox="0 0 24 24" width="24" height="24" fill="none" stroke="currentColor" stroke-width="2">
-                        <circle cx="5" cy="5" r="2"/>
-                        <circle cx="19" cy="5" r="2"/>
-                        <circle cx="5" cy="19" r="2"/>
-                        <circle cx="12" cy="12" r="2"/>
-                        <path d="M5 7v10M7 5h10M17 19H7M19 7l-5 5"/>
-                    </svg>
-                </button>
-                <button id="menu-toggle" class="control-btn mobile-only" aria-label="Open Menu">
-                    <svg viewBox="0 0 24 24" width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round">
-                        <path d="M3 6h18M3 12h18M3 18h18"/>
-                    </svg>
-                </button>
-            </div>
-        </div>
-    </header>
-
-    <main class="container fade-in">
-        <section class="hero">
-            <h1>The Odisha Sacred Odyssey</h1>
-            <p>Journey into the heart of ancient Kalinga, exploring the timeless narratives of temples, myths, and stone.</p>
-        </section>
-
-        <section id="featured-posts">
-            <!-- Loader -->
-            <div class="loader-chakra"></div>
-        </section>
-    </main>
-
-    <footer>
-        <p>&copy; 2024 TravelBlog. All rights reserved.</p>
-        <p>Designed with Digital Parchment Aesthetic.</p>
-    </footer>
-
-    <aside id="constellation-drawer" class="constellation-drawer" aria-hidden="true">
-        <div class="drawer-header">
-            <h2 class="drawer-title">Constellation</h2>
-            <button id="close-drawer" class="close-drawer" aria-label="Close Drawer">&times;</button>
-        </div>
-        <div id="constellation-content"></div>
-    </aside>
-
-    <script type="module" src="assets/js/main.js"></script>
-    <script type="module" src="assets/js/home.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>The Æsthetic | A Luxury Editorial</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant:wght@300;400;700&family=Playfair+Display:wght@400;700&family=Lora:wght@400;500;700&display=swap" rel="stylesheet">
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
